--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -25,25 +25,49 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/yakuhanjp@3.3.1/dist/css/yakuhanjp.min.css">
 </head>
 <body>
+  <div class="hidarikikinoEren">
     <svg display="none">
       <defs>
         <symbol id="arrow" viewBox="0 0 40 23">
           <path d="M40,11.523L0,23v-5.088l22.151-6.457L0,4.999V0L40,11.523z"></path>
-        </symbol>  
-      </defs>    
+        </symbol> 
+        <symbol id="iconTwitter">
+          <path d="M39,8.213c-1.397,0.621-2.901,1.039-4.477,1.229c1.611-0.965,2.847-2.494,3.427-4.313c-1.507,0.893-3.173,1.54-4.952,1.889 c-1.419-1.514-3.447-2.461-5.69-2.461c-4.303,0-7.793,3.494-7.793,7.798c0,0.613,0.066,1.205,0.2,1.775 C13.236,13.803,7.493,10.703,3.646,5.98C2.975,7.137,2.59,8.477,2.59,9.905c0,2.701,1.377,5.09,3.469,6.489 c-1.278-0.039-2.481-0.392-3.533-0.974v0.096c0,3.779,2.687,6.931,6.256,7.645c-0.655,0.183-1.343,0.275-2.055,0.275 c-0.502,0-0.992-0.046-1.466-0.137c0.991,3.095,3.869,5.352,7.281,5.413c-2.668,2.091-6.03,3.337-9.682,3.337 c-0.629,0-1.251-0.035-1.86-0.107c3.45,2.211,7.548,3.502,11.95,3.502c14.342,0,22.181-11.88,22.181-22.187 c0-0.338-0.007-0.675-0.021-1.008C36.635,11.149,37.958,9.777,39,8.213"></path>
+        </symbol>
+        <symbol id="iconFacebook" viewBox="0 0 40 40">
+          <path d="M11.134,13.567h3.928V9.75c0-1.684,0.043-4.28,1.265-5.888C17.615,2.158,19.383,1,22.424,1c4.955,0,7.042,0.707,7.042,0.707 l-0.982,5.82c0,0-1.637-0.473-3.164-0.473c-1.528,0-2.896,0.547-2.896,2.074v4.439h6.264l-0.437,5.685h-5.827V39h-7.362V19.252 h-3.928V13.567z"></path>
+        </symbol>
+        <symbol id="iconLine" viewBox="0 0 40 40">
+          <path d="M40,17.174c0-8.949-8.972-16.23-20-16.23c-11.027,0-20,7.281-20,16.23c0,8.023,7.115,14.742,16.726,16.013 c0.651,0.141,1.538,0.429,1.762,0.986c0.202,0.505,0.132,1.298,0.065,1.808c0,0-0.235,1.411-0.285,1.712 c-0.087,0.505-0.402,1.978,1.732,1.078c2.135-0.899,11.518-6.782,15.714-11.612h-0.001C38.611,23.981,40,20.756,40,17.174z M12.944,21.952c0,0.215-0.174,0.39-0.389,0.39H6.951H6.95c-0.104,0-0.199-0.041-0.269-0.109c-0.002-0.002-0.004-0.003-0.006-0.005 c-0.002-0.002-0.004-0.004-0.005-0.006c-0.067-0.07-0.109-0.164-0.109-0.269v-0.001v-8.714c0-0.215,0.175-0.389,0.39-0.389h1.403 c0.215,0,0.389,0.174,0.389,0.389v6.921h3.812c0.215,0,0.389,0.175,0.389,0.39V21.952z M16.326,21.953 c0,0.215-0.175,0.389-0.39,0.389h-1.403c-0.215,0-0.39-0.174-0.39-0.389v-8.715c0-0.215,0.175-0.389,0.39-0.389h1.403 c0.215,0,0.39,0.174,0.39,0.389V21.953z M25.982,21.953c0,0.215-0.174,0.389-0.39,0.389H24.19c-0.035,0-0.068-0.005-0.1-0.013 c-0.002,0-0.004-0.001-0.006-0.001c-0.009-0.003-0.017-0.005-0.027-0.009c-0.004-0.001-0.008-0.003-0.012-0.004 c-0.007-0.003-0.013-0.005-0.019-0.008c-0.006-0.003-0.013-0.006-0.019-0.009c-0.004-0.002-0.007-0.004-0.011-0.006 c-0.008-0.004-0.016-0.009-0.024-0.015c-0.001-0.001-0.003-0.002-0.004-0.003c-0.037-0.025-0.071-0.057-0.099-0.096l-3.998-5.4 v5.176c0,0.215-0.175,0.389-0.39,0.389h-1.403c-0.215,0-0.39-0.174-0.39-0.389v-8.715c0-0.215,0.175-0.389,0.39-0.389h1.403 c0.005,0,0.009,0.001,0.014,0.001c0.007,0,0.014,0.001,0.02,0.001c0.007,0.001,0.014,0.001,0.021,0.003 c0.005,0.001,0.011,0.001,0.016,0.002c0.008,0.002,0.015,0.003,0.022,0.005c0.005,0.001,0.009,0.002,0.014,0.003 c0.008,0.002,0.015,0.005,0.023,0.008c0.004,0.001,0.008,0.003,0.013,0.004c0.008,0.003,0.015,0.006,0.022,0.009 c0.004,0.002,0.008,0.004,0.012,0.006c0.007,0.003,0.014,0.008,0.021,0.012c0.004,0.002,0.008,0.004,0.012,0.007 c0.007,0.004,0.014,0.009,0.02,0.014c0.003,0.003,0.007,0.005,0.01,0.008c0.007,0.005,0.014,0.011,0.021,0.017 c0.003,0.002,0.005,0.004,0.007,0.007c0.008,0.008,0.016,0.015,0.023,0.024c0.001,0.001,0.002,0.002,0.003,0.003 c0.011,0.013,0.021,0.026,0.03,0.039l3.994,5.393v-5.177c0-0.215,0.174-0.389,0.39-0.389h1.403c0.215,0,0.39,0.174,0.39,0.389 V21.953z M33.728,14.642c0,0.215-0.174,0.39-0.389,0.39h-3.812v1.473h3.812c0.215,0,0.389,0.175,0.389,0.39v1.403 c0,0.215-0.174,0.39-0.389,0.39h-3.812v1.473h3.812c0.215,0,0.389,0.175,0.389,0.39v1.403c0,0.215-0.174,0.39-0.389,0.39h-5.604 h-0.001c-0.104,0-0.199-0.042-0.269-0.109c-0.002-0.002-0.004-0.003-0.006-0.005c-0.002-0.002-0.004-0.004-0.005-0.006 c-0.067-0.07-0.109-0.164-0.109-0.269v-0.001v-8.713v-0.001c0-0.104,0.041-0.199,0.108-0.268c0.002-0.002,0.004-0.004,0.006-0.007 c0.001-0.001,0.003-0.003,0.004-0.004c0.07-0.068,0.165-0.11,0.27-0.11h0.001h5.604c0.215,0,0.389,0.175,0.389,0.39V14.642z"></path>
+        </symbol>
+      </defs>
     </svg>
-  
-  
-  <div class="btnSideMenu">
-    <a class="btnSideMenu_inner" href="">
-      <span>トップ</span>
-      <svg>
-        <use xlink:href="#arrow">
-      </svg>
-    </a>
+    <div class="lp-loading">
+      <div class="lp-loading_wrap">
+        <div class="lp-loadingInner">
+          <div class="lp-loadingInner_item mod-item1 js-test"></div>
+          <div class="lp-loadingInner_item mod-item2"></div>
+          <div class="lp-loadingInner_item mod-item3"></div>
+          <div class="lp-loadingInner_item mod-item4"></div>
+        </div>
+      </div>
+      <p class="lp-loading_text"></p>
+    </div>
+    <ul class="js-test">
+      <li><img src="/data/hidari-kikino-eren/images/test/01 (1).png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/01.png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/02 (1).png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/02.png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/03 (1).png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/03.png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/04 (1).png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/04.png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/05 (1).png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/05.png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/06 (1).png" alt=""></li>
+      <li><img src="/data/hidari-kikino-eren/images/test/06.png" alt=""></li>
+    </ul>
   </div>
-  
-
   <script type="text/javascript" src="../../lib/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="../../src/js/hidari-kikino-eren/index.js"></script>
 </body>
