--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -45,7 +45,7 @@
     <div class="lp-loading">
       <div class="lp-loading_wrap">
         <div class="lp-loadingInner">
-          <div class="lp-loadingInner_item mod-item1 js-test"></div>
+          <div class="lp-loadingInner_item mod-item1 js-progressGauge"></div>
           <div class="lp-loadingInner_item mod-item2"></div>
           <div class="lp-loadingInner_item mod-item3"></div>
           <div class="lp-loadingInner_item mod-item4"></div>
