openingアニメーション mobile fadein実装

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -42,13 +42,13 @@
         </symbol>
       </defs>
     </svg>
-    <div class="lp-loading">
+    <div class="lp-loading js-loading">
       <div class="lp-loading_wrap">
         <div class="lp-loadingInner">
-          <div class="lp-loadingInner_item mod-item1 js-progressGauge"></div>
-          <div class="lp-loadingInner_item mod-item2"></div>
-          <div class="lp-loadingInner_item mod-item3"></div>
-          <div class="lp-loadingInner_item mod-item4"></div>
+          <div class="lp-loadingInner_item mod-item1 js-progressGauge js-scaleItem"></div>
+          <div class="lp-loadingInner_item mod-item2 js-scaleItem"></div>
+          <div class="lp-loadingInner_item mod-item3 js-scaleItem"></div>
+          <div class="lp-loadingInner_item mod-item4 js-scaleItem"></div>
         </div>
       </div>
       <p class="lp-loading_text"></p>
