mobile menu 実装完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -31,7 +31,7 @@
         <symbol id="arrow" viewBox="0 0 40 23">
           <path d="M40,11.523L0,23v-5.088l22.151-6.457L0,4.999V0L40,11.523z"></path>
         </symbol> 
-        <symbol id="iconTwitter">
+        <symbol id="iconTwitter" viewBox="0 0 40 40">
           <path d="M39,8.213c-1.397,0.621-2.901,1.039-4.477,1.229c1.611-0.965,2.847-2.494,3.427-4.313c-1.507,0.893-3.173,1.54-4.952,1.889 c-1.419-1.514-3.447-2.461-5.69-2.461c-4.303,0-7.793,3.494-7.793,7.798c0,0.613,0.066,1.205,0.2,1.775 C13.236,13.803,7.493,10.703,3.646,5.98C2.975,7.137,2.59,8.477,2.59,9.905c0,2.701,1.377,5.09,3.469,6.489 c-1.278-0.039-2.481-0.392-3.533-0.974v0.096c0,3.779,2.687,6.931,6.256,7.645c-0.655,0.183-1.343,0.275-2.055,0.275 c-0.502,0-0.992-0.046-1.466-0.137c0.991,3.095,3.869,5.352,7.281,5.413c-2.668,2.091-6.03,3.337-9.682,3.337 c-0.629,0-1.251-0.035-1.86-0.107c3.45,2.211,7.548,3.502,11.95,3.502c14.342,0,22.181-11.88,22.181-22.187 c0-0.338-0.007-0.675-0.021-1.008C36.635,11.149,37.958,9.777,39,8.213"></path>
         </symbol>
         <symbol id="iconFacebook" viewBox="0 0 40 40">
@@ -42,7 +42,7 @@
         </symbol>
       </defs>
     </svg>
-    <div class="lp-loading js-loading">
+    <!-- <div class="lp-loading js-loading">
       <div class="lp-loading_wrap">
         <div class="lp-loadingInner">
           <div class="lp-loadingInner_item mod-item1 js-progressGauge js-scaleItem"></div>
@@ -52,7 +52,88 @@
         </div>
       </div>
       <p class="lp-loading_text"></p>
+    </div> -->
+    <header class="lp-header">
+      <div class="lp-headerTicker">
+      </div>
+    </header>
+    <button class="lp-menuBtn js-menuBtn">
+      <div class="lp-menuBtn_open">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="lp-menuBtn_close js-btn">
+      </div>
+    </button>
+    <div class="lp-menu js-menu">
+      <div class="lp-menu_wrap">
+        <nav class="lp-menu_nav">
+          <ul>
+            <li class="btnSideMenu">
+              <a class="btnSideMenu_inner" href="">
+                <span>トップ</span>
+                <svg>
+                  <use xlink:href="#arrow">
+                </svg>
+              </a>
+            </li>
+            <li class="btnSideMenu">
+              <a class="btnSideMenu_inner" href="">
+                <span>あらすじ</span>
+                <svg>
+                  <use xlink:href="#arrow">
+                </svg>
+              </a>
+            </li>
+            <li class="btnSideMenu">
+              <a class="btnSideMenu_inner" href="">
+                <span>ストーリー</span>
+                <svg>
+                  <use xlink:href="#arrow">
+                </svg>
+              </a>
+            </li>
+            <li class="btnSideMenu">
+              <a class="btnSideMenu_inner" href="">
+                <span>投票結果</span>
+                <svg>
+                  <use xlink:href="#arrow">
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="lp-menu_sns">
+          <ul>
+            <li class="btnSideMenu">
+              <a class="btnSideMenu_inner" href="">
+                <svg>
+                  <use xlink:href="#iconTwitter">
+                </svg>
+              </a>
+            </li>
+            <li class="btnSideMenu">
+              <a class="btnSideMenu_inner" href="">
+                <svg>
+                  <use xlink:href="#iconFacebook">
+                </svg>
+              </a>
+            </li>
+            <li class="btnSideMenu">
+              <a class="btnSideMenu_inner" href="">
+                <svg>
+                  <use xlink:href="#iconLine">
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
+    <main>
+      
+    </main>
     <ul class="js-test">
       <li><img src="/data/hidari-kikino-eren/images/test/01 (1).png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/01.png" alt=""></li>
