feature/hidari-kikino-eren　mobile メニュー ホバーアクション修正

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -94,7 +94,7 @@
                 </svg>
               </a>
             </li>
-            <li class="btnSideMenu">
+            <li class="btnSideMenu mod-vote">
               <a class="btnSideMenu_inner" href="">
                 <span>投票結果</span>
                 <svg>
@@ -106,21 +106,21 @@
         </nav>
         <nav class="lp-menu_sns">
           <ul>
-            <li class="btnSideMenu">
+            <li class="btnSideMenu mod-sns">
               <a class="btnSideMenu_inner" href="">
                 <svg>
                   <use xlink:href="#iconTwitter">
                 </svg>
               </a>
             </li>
-            <li class="btnSideMenu">
+            <li class="btnSideMenu mod-sns">
               <a class="btnSideMenu_inner" href="">
                 <svg>
                   <use xlink:href="#iconFacebook">
                 </svg>
               </a>
             </li>
-            <li class="btnSideMenu">
+            <li class="btnSideMenu mod-sns">
               <a class="btnSideMenu_inner" href="">
                 <svg>
                   <use xlink:href="#iconLine">
@@ -131,10 +131,11 @@
         </nav>
       </div>
     </div>
-    <main>
+    <main class="lp-main">
+      <section></section>
       
     </main>
-    <ul class="js-test">
+    <!-- <ul class="js-test">
       <li><img src="/data/hidari-kikino-eren/images/test/01 (1).png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/01.png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/02 (1).png" alt=""></li>
@@ -147,7 +148,7 @@
       <li><img src="/data/hidari-kikino-eren/images/test/05.png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/06 (1).png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/06.png" alt=""></li>
-    </ul>
+    </ul> -->
   </div>
   <script type="text/javascript" src="../../lib/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="../../src/js/hidari-kikino-eren/index.js"></script>
