--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -132,8 +132,34 @@
       </div>
     </div>
     <main class="lp-main">
-      <section></section>
-      
+      <section class="lp-kv">
+        <ul class="lp-kv_characters">
+          <li class="lp-character mod-item3">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item4">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item1">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item2">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item3">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item4">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item1">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item2">
+            <div class="lp-character_inner"></div>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- <ul class="js-test">
       <li><img src="/data/hidari-kikino-eren/images/test/01 (1).png" alt=""></li>
