スライダー実装途中 js or cssか

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -133,7 +133,7 @@
     </div>
     <main class="lp-main">
       <section class="lp-kv">
-        <ul class="lp-kv_characters">
+        <ul class="lp-kv_characters js-kv">
           <li class="lp-character mod-item3">
             <div class="lp-character_inner"></div>
           </li>
