kv section mobile見た目基礎完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -42,7 +42,7 @@
         </symbol>
       </defs>
     </svg>
-    <div class="lp-loading js-loading">
+    <!-- <div class="lp-loading js-loading">
       <div class="lp-loading_wrap">
         <div class="lp-loadingInner">
           <div class="lp-loadingInner_item mod-item1 js-progressGauge js-scaleItem"></div>
@@ -52,7 +52,7 @@
         </div>
       </div>
       <p class="lp-loading_text"></p>
-    </div>
+    </div> -->
     <header class="lp-header">
       <div class="lp-headerTicker">
       </div>
@@ -159,9 +159,16 @@
             <div class="lp-character_inner"></div>
           </li>
         </ul>
+        <h1>
+          <span class="lp-kv_title mod-title1"><img src="/data/hidari-kikino-eren/images/kv_title1.png" alt=""></span>
+          <span class="lp-kv_title mod-title2"><img src="/data/hidari-kikino-eren/images/kv_title2.png" alt=""></span>
+        </h1>
+        <div class="lp-kv_name">
+          <img src="/data/hidari-kikino-eren/images/kv_names.png" alt="">
+        </div>
       </section>
     </main>
-    <!-- <ul class="js-test">
+    <ul class="js-test">
       <li><img src="/data/hidari-kikino-eren/images/test/01 (1).png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/01.png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/02 (1).png" alt=""></li>
@@ -174,7 +181,7 @@
       <li><img src="/data/hidari-kikino-eren/images/test/05.png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/06 (1).png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/06.png" alt=""></li>
-    </ul> -->
+    </ul>
   </div>
   <script type="text/javascript" src="../../lib/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="../../src/js/hidari-kikino-eren/index.js"></script>
