mobile summery section 上部完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -131,7 +131,7 @@
         </nav>
       </div>
     </div>
-    <main class="lp-main">
+    <main>
       <section class="lp-kv">
         <ul class="lp-kv_characters js-kv">
           <li class="lp-character mod-item3">
@@ -167,8 +167,34 @@
           <img src="/data/hidari-kikino-eren/images/kv_names.png" alt="">
         </div>
       </section>
+
+      <section class="lp-summery">
+        <div class="lp-summery_heading">
+          <div class="lp-summery_headingInner">
+            <h2>
+              <img src="/data/hidari-kikino-eren/images/summary_title.png" alt="">
+            </h2>
+            <div class="lp-summery_headingDesc">
+              <p class="lp-summery_descLine">目黒広告社の朝倉CDのもとに、</p>
+              <p class="lp-summery_descLine">日本を代表するアイウエアカンパニーJINSから、</p>
+              <p class="lp-summery_descLine">新聞広告をテーマにした競合プレゼンのオファーが。</p>
+              <p class="lp-summery_descLine">しかし、ライバルは、ニュースになる広告を仕掛け続ける</p>
+              <p class="lp-summery_descLine">The Breakthrough Company GO</p>
+              <p class="lp-summery_descLine">代表の三浦は相手にもならないとうそぶく、、、</p>
+              <p class="lp-summery_descLine">商品であるバイオレットプラスは画期的ゆえに</p>
+              <p class="lp-summery_descLine">広告では表現できないことも多い。</p>
+              <p class="lp-summery_descLine">混迷を極める状況のなか、</p>
+              <p class="lp-summery_descLine">二つのチームが出した企画とはー。</p>
+            </div>
+          </div>
+        </div>
+        <div class="lp-summery_relationship">
+
+        </div>
+      </section>
     </main>
-    <ul class="js-test">
+
+    <!-- <ul class="js-test">
       <li><img src="/data/hidari-kikino-eren/images/test/01 (1).png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/01.png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/02 (1).png" alt=""></li>
@@ -181,7 +207,7 @@
       <li><img src="/data/hidari-kikino-eren/images/test/05.png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/06 (1).png" alt=""></li>
       <li><img src="/data/hidari-kikino-eren/images/test/06.png" alt=""></li>
-    </ul>
+    </ul> -->
   </div>
   <script type="text/javascript" src="../../lib/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="../../src/js/hidari-kikino-eren/index.js"></script>
