mobile summery 完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -189,9 +189,17 @@
           </div>
         </div>
         <div class="lp-summery_relationship">
-
+          <a href="">
+            <figure>
+              <picture>
+                <source srcset="/data/hidari-kikino-eren/images/summary_relationship_l.jpg" media="(min-width: 800px)">
+                <img src="/data/hidari-kikino-eren/images/summary_relationship.jpg" alt="">
+              </picture>
+            </figure>
+          </a>
         </div>
       </section>
+
     </main>
 
     <!-- <ul class="js-test">
