mobile story突入 file整理途中

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -70,32 +70,32 @@
       <div class="lp-menu_wrap">
         <nav class="lp-menu_nav">
           <ul>
-            <li class="btnSideMenu">
-              <a class="btnSideMenu_inner" href="">
+            <li class="btn">
+              <a class="btn_inner" href="">
                 <span>トップ</span>
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
               </a>
             </li>
-            <li class="btnSideMenu">
-              <a class="btnSideMenu_inner" href="">
+            <li class="btn">
+              <a class="btn_inner" href="">
                 <span>あらすじ</span>
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
               </a>
             </li>
-            <li class="btnSideMenu">
-              <a class="btnSideMenu_inner" href="">
+            <li class="btn">
+              <a class="btn_inner" href="">
                 <span>ストーリー</span>
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
               </a>
             </li>
-            <li class="btnSideMenu mod-vote">
-              <a class="btnSideMenu_inner" href="">
+            <li class="btn mod-vote">
+              <a class="btn_inner" href="">
                 <span>投票結果</span>
                 <svg>
                   <use xlink:href="#arrow">
@@ -106,22 +106,22 @@
         </nav>
         <nav class="lp-menu_sns">
           <ul>
-            <li class="btnSideMenu mod-sns">
-              <a class="btnSideMenu_inner" href="">
+            <li class="btn mod-sns">
+              <a class="btn_inner" href="">
                 <svg>
                   <use xlink:href="#iconTwitter">
                 </svg>
               </a>
             </li>
-            <li class="btnSideMenu mod-sns">
-              <a class="btnSideMenu_inner" href="">
+            <li class="btn mod-sns">
+              <a class="btn_inner" href="">
                 <svg>
                   <use xlink:href="#iconFacebook">
                 </svg>
               </a>
             </li>
-            <li class="btnSideMenu mod-sns">
-              <a class="btnSideMenu_inner" href="">
+            <li class="btn mod-sns">
+              <a class="btn_inner" href="">
                 <svg>
                   <use xlink:href="#iconLine">
                 </svg>
@@ -197,6 +197,38 @@
               </picture>
             </figure>
           </a>
+        </div>
+      </section>
+
+      <section class="lp-story">
+        <div class="lp-story_inner">
+          <div class="lp-story_tabs">
+            <button class="lp-story_tab btn">
+              <div class="btn_inner">
+                <svg>
+                  <use xlink:href="#arrow">
+                </svg>
+                <span class="lp-story_label">プロローグ<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
+              </div>
+            </button>
+            <button class="lp-story_tab btn">
+              <div class="btn_inner">
+                <svg>
+                  <use xlink:href="#arrow">
+                </svg>
+                <span class="lp-story_label">本編<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
+              </div>
+            </button>
+          </div>
+          <div class="lp-story_contents"> 
+            <ul class="lp-story_pages">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
         </div>
       </section>
 
