tab pc用アニメーション実装

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -203,16 +203,16 @@
       <section class="lp-story">
         <div class="lp-story_inner">
           <div class="lp-story_tabs">
-            <button class="lp-story_tab btn">
-              <div class="btn_inner">
+            <button class="lp-story_tab tab">
+              <div class="tab_inner">
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
-                <span class="lp-story_label">プロローグ<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
+                <span class="lp-story_label brn_inner">プロローグ<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
               </div>
             </button>
-            <button class="lp-story_tab btn">
-              <div class="btn_inner">
+            <button class="lp-story_tab tab">
+              <div class="tab_inner">
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
