mobile tab切り替え上部完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -200,10 +200,10 @@
         </div>
       </section>
 
-      <section class="lp-story">
+      <section class="lp-story add-prologue">
         <div class="lp-story_inner">
           <div class="lp-story_tabs">
-            <button class="lp-story_tab tab">
+            <button class="lp-story_tab tab js-tab add-active">
               <div class="tab_inner">
                 <svg>
                   <use xlink:href="#arrow">
@@ -211,7 +211,7 @@
                 <span class="lp-story_label brn_inner">プロローグ<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
               </div>
             </button>
-            <button class="lp-story_tab tab">
+            <button class="lp-story_tab tab js-tab">
               <div class="tab_inner">
                 <svg>
                   <use xlink:href="#arrow">
@@ -220,14 +220,31 @@
               </div>
             </button>
           </div>
-          <div class="lp-story_contents"> 
-            <ul class="lp-story_pages">
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
+          <div class="lp-story_wrap"> 
+            <ol class="lp-story_pages js-pages add-active">
+              <li><img src="/data/hidari-kikino-eren/images/prologue/01.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/prologue/02.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/prologue/03.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/prologue/04.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/prologue/05.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/prologue/06.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/prologue/07.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/prologue/08.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/prologue/09.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/prologue/10.png" alt=""></li>
+            </ol>
+            <ol class="lp-story_pages js-pages">
+              <li><img src="/data/hidari-kikino-eren/images/main/01.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/main/02.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/main/03.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/main/04.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/main/05.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/main/06.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/main/07.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/main/08.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/main/09.png" alt=""></li>
+              <li><img src="/data/hidari-kikino-eren/images/main/10.png" alt=""></li>
+            </ol>
           </div>
         </div>
       </section>
