--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -42,7 +42,7 @@
         </symbol>
       </defs>
     </svg>
-    <!-- <div class="lp-loading js-loading">
+    <div class="lp-loading js-loading">
       <div class="lp-loading_wrap">
         <div class="lp-loadingInner">
           <div class="lp-loadingInner_item mod-item1 js-progressGauge js-scaleItem"></div>
@@ -52,7 +52,7 @@
         </div>
       </div>
       <p class="lp-loading_text"></p>
-    </div> -->
+    </div>
     <header class="lp-header">
       <div class="lp-headerTicker">
       </div>
@@ -245,6 +245,24 @@
               <li><img src="/data/hidari-kikino-eren/images/main/09.png" alt=""></li>
               <li><img src="/data/hidari-kikino-eren/images/main/10.png" alt=""></li>
             </ol>
+          </div>
+          <div class="lp-story_tabs">
+            <button class="lp-story_tab tab js-tab add-active">
+              <div class="tab_inner">
+                <svg>
+                  <use xlink:href="#arrow">
+                </svg>
+                <span class="lp-story_label brn_inner">プロローグ<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
+              </div>
+            </button>
+            <button class="lp-story_tab tab js-tab">
+              <div class="tab_inner">
+                <svg>
+                  <use xlink:href="#arrow">
+                </svg>
+                <span class="lp-story_label">本編<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
+              </div>
+            </button>
           </div>
         </div>
       </section>
