mobile 下部 result section 2/3完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -42,7 +42,7 @@
         </symbol>
       </defs>
     </svg>
-    <div class="lp-loading js-loading">
+    <!-- <div class="lp-loading js-loading">
       <div class="lp-loading_wrap">
         <div class="lp-loadingInner">
           <div class="lp-loadingInner_item mod-item1 js-progressGauge js-scaleItem"></div>
@@ -52,7 +52,7 @@
         </div>
       </div>
       <p class="lp-loading_text"></p>
-    </div>
+    </div> -->
     <header class="lp-header">
       <div class="lp-headerTicker">
       </div>
@@ -171,9 +171,7 @@
       <section class="lp-summery">
         <div class="lp-summery_heading">
           <div class="lp-summery_headingInner">
-            <h2>
-              <img src="/data/hidari-kikino-eren/images/summary_title.png" alt="">
-            </h2>
+            <h2><img src="/data/hidari-kikino-eren/images/summary_title.png" alt=""></h2>
             <div class="lp-summery_headingDesc">
               <p class="lp-summery_descLine">目黒広告社の朝倉CDのもとに、</p>
               <p class="lp-summery_descLine">日本を代表するアイウエアカンパニーJINSから、</p>
@@ -246,8 +244,8 @@
               <li><img src="/data/hidari-kikino-eren/images/main/10.png" alt=""></li>
             </ol>
           </div>
-          <div class="lp-story_tabs">
-            <button class="lp-story_tab tab js-tab add-active">
+          <div class="lp-story_tabs mod-bottomTab">
+            <button class="lp-story_tab js-tab add-active">
               <div class="tab_inner">
                 <svg>
                   <use xlink:href="#arrow">
@@ -255,7 +253,7 @@
                 <span class="lp-story_label brn_inner">プロローグ<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
               </div>
             </button>
-            <button class="lp-story_tab tab js-tab">
+            <button class="lp-story_tab js-tab">
               <div class="tab_inner">
                 <svg>
                   <use xlink:href="#arrow">
@@ -263,6 +261,33 @@
                 <span class="lp-story_label">本編<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
               </div>
             </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="lp-result">
+        <div class="lp-result_bgWrap">
+          <div class="bgItem mod-top"></div>
+          <div class="bgItem mod-bottom"></div>
+        </div>
+        <div class="lp-result_inner">
+          <h2 class="lp-resultTitle">
+            <span class="lp-resultTitle_inner"><img src="/data/hidari-kikino-eren/images/result_title1.png" alt=""></span>
+            <span class="lp-resultTitle_inner"><img src="/data/hidari-kikino-eren/images/result_title2.png" alt=""></span>
+          </h2>
+          <div class="lp-resultDesc">
+            <p class="lp-resultDesc_line">10/20〜10/28の投票期間で</p>
+            <p class="lp-resultDesc_line">およそ2342人の参加ありがとうございました!</p>
+            <p class="lp-resultDesc_line">みなさんの投票の結果、採用されたのは</p>
+            <p class="lp-resultDesc_line">「目黒広告社」の広告でした!</p>
+            <p class="lp-resultDesc_line">実際の掲載を楽しみにしていてください。</p>
+          </div>
+          <div class="lp-resultLogo"><img src="/data/hidari-kikino-eren/images/result_logo_meguro.png" alt=""></div>
+          <div class="lp-resultImg1"><img src="/data/hidari-kikino-eren/images/result_img1.png" alt=""></div>
+          <div class="lp-resultImg2"><img src="/data/hidari-kikino-eren/images/result_img2.png" alt=""></div>
+          <div class="lp-resultDate">
+            <p class="lp-resultDate_label"><img src="/data/hidari-kikino-eren/images/result_info_label.png" alt=""></p>
+            <p class="lp-resultDate_day"><img src="/data/hidari-kikino-eren/images/result_date.png" alt=""></p>
           </div>
         </div>
       </section>
