--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -53,7 +53,7 @@
       </div>
       <p class="lp-loading_text"></p>
     </div> -->
-    <header class="lp-header">
+    <header class="lp-header js-header">
       <div class="lp-headerTicker">
       </div>
     </header>
@@ -219,7 +219,7 @@
             </button>
           </div>
           <div class="lp-story_wrap"> 
-            <ol class="lp-story_pages js-pages add-active">
+            <ol class="lp-story_pages mod-prologue js-pages add-active">
               <li><img src="/data/hidari-kikino-eren/images/prologue/01.png" alt=""></li>
               <li><img src="/data/hidari-kikino-eren/images/prologue/02.png" alt=""></li>
               <li><img src="/data/hidari-kikino-eren/images/prologue/03.png" alt=""></li>
@@ -231,7 +231,7 @@
               <li><img src="/data/hidari-kikino-eren/images/prologue/09.png" alt=""></li>
               <li><img src="/data/hidari-kikino-eren/images/prologue/10.png" alt=""></li>
             </ol>
-            <ol class="lp-story_pages js-pages">
+            <ol class="lp-story_pages mod-main js-pages">
               <li><img src="/data/hidari-kikino-eren/images/main/01.png" alt=""></li>
               <li><img src="/data/hidari-kikino-eren/images/main/02.png" alt=""></li>
               <li><img src="/data/hidari-kikino-eren/images/main/03.png" alt=""></li>
