ループ入れ替え処理途中

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -132,8 +132,8 @@
       </div>
     </div>
     <main>
-      <section class="lp-kv">
-        <ul class="lp-kv_characters js-kv">
+      <section class="lp-kv js-kv">
+        <ul class="lp-kv_characters js-charaList">
           <li class="lp-character mod-item3">
             <div class="lp-character_inner"></div>
           </li>
