--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -42,7 +42,7 @@
         </symbol>
       </defs>
     </svg>
-    <div class="lp-loading js-loading">
+    <!-- <div class="lp-loading js-loading">
       <div class="lp-loading_wrap">
         <div class="lp-loadingInner">
           <div class="lp-loadingInner_item mod-item1 js-progressGauge js-scaleItem"></div>
@@ -52,12 +52,12 @@
         </div>
       </div>
       <p class="lp-loading_text"></p>
-    </div>
+    </div> -->
     <header class="lp-header js-header">
       <div class="lp-headerTicker">
       </div>
     </header>
-    <button class="lp-menuBtn js-menuBtn">
+    <button class="lp-menuBtn js-menuBtn mod-displayNone_smallDesktop">
       <div class="lp-menuBtn_open">
         <span></span>
         <span></span>
