PC btn animation done

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -70,32 +70,32 @@
       <div class="lp-menu_wrap">
         <nav class="lp-menu_nav">
           <ul>
-            <li class="btn">
-              <a class="btn_inner" href="">
+            <li class="buttonSquare">
+              <a class="buttonSquare_inner" href="">
                 <span>トップ</span>
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
               </a>
             </li>
-            <li class="btn">
-              <a class="btn_inner" href="">
+            <li class="buttonSquare">
+              <a class="buttonSquare_inner" href="">
                 <span>あらすじ</span>
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
               </a>
             </li>
-            <li class="btn">
-              <a class="btn_inner" href="">
+            <li class="buttonSquare">
+              <a class="buttonSquare_inner" href="">
                 <span>ストーリー</span>
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
               </a>
             </li>
-            <li class="btn mod-vote">
-              <a class="btn_inner" href="">
+            <li class="buttonSquare mod-vote">
+              <a class="buttonSquare_inner" href="">
                 <span>投票結果</span>
                 <svg>
                   <use xlink:href="#arrow">
@@ -106,22 +106,22 @@
         </nav>
         <nav class="lp-menu_sns">
           <ul>
-            <li class="btn mod-sns">
-              <a class="btn_inner" href="">
+            <li class="buttonSquare mod-sns">
+              <a class="buttonSquare_inner" href="">
                 <svg>
                   <use xlink:href="#iconTwitter">
                 </svg>
               </a>
             </li>
-            <li class="btn mod-sns">
-              <a class="btn_inner" href="">
+            <li class="buttonSquare mod-sns">
+              <a class="buttonSquare_inner" href="">
                 <svg>
                   <use xlink:href="#iconFacebook">
                 </svg>
               </a>
             </li>
-            <li class="btn mod-sns">
-              <a class="btn_inner" href="">
+            <li class="buttonSquare mod-sns">
+              <a class="buttonSquare_inner" href="">
                 <svg>
                   <use xlink:href="#iconLine">
                 </svg>
@@ -134,28 +134,28 @@
     <main>
       <section class="lp-kv js-kv">
         <ul class="lp-kv_characters js-charaList">
-          <li class="lp-character mod-item3">
+          <li class="lp-character mod-item3 mod-displayNone_smallDesktop">
             <div class="lp-character_inner"></div>
           </li>
-          <li class="lp-character mod-item4">
-            <div class="lp-character_inner"></div>
-          </li>
-          <li class="lp-character mod-item1">
-            <div class="lp-character_inner"></div>
-          </li>
-          <li class="lp-character mod-item2">
-            <div class="lp-character_inner"></div>
-          </li>
-          <li class="lp-character mod-item3">
-            <div class="lp-character_inner"></div>
-          </li>
-          <li class="lp-character mod-item4">
+          <li class="lp-character mod-item4 mod-displayNone_smallDesktop">
             <div class="lp-character_inner"></div>
           </li>
           <li class="lp-character mod-item1">
             <div class="lp-character_inner"></div>
           </li>
           <li class="lp-character mod-item2">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item3">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item4">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item1 mod-displayNone_smallDesktop">
+            <div class="lp-character_inner"></div>
+          </li>
+          <li class="lp-character mod-item2 mod-displayNone_smallDesktop">
             <div class="lp-character_inner"></div>
           </li>
         </ul>
