PC style tab上部まで完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -164,7 +164,7 @@
           <span class="lp-kv_title mod-title2"><img src="/data/hidari-kikino-eren/images/kv_title2.png" alt=""></span>
         </h1>
         <div class="lp-kv_name">
-          <img src="/data/hidari-kikino-eren/images/kv_names.png" alt="">
+          <img src="/data/hidari-kikino-eren/images/kv_names.png" alt="朝日新聞社 ✕ 左利きのエレン Powered by JINS">
         </div>
       </section>
 
@@ -194,6 +194,9 @@
                 <img src="/data/hidari-kikino-eren/images/summary_relationship.jpg" alt="">
               </picture>
             </figure>
+            <div>
+              
+            </div>
           </a>
         </div>
       </section>
@@ -206,7 +209,7 @@
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
-                <span class="lp-story_label brn_inner">プロローグ<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
+                <span class="lp-story_label brn_inner">プロローグ<br><span>「新聞広告の日<br class="mod-displayNone_smallDesktop">THE NEWS FOR NEW TEAM」</span></span>
               </div>
             </button>
             <button class="lp-story_tab tab js-tab">
@@ -214,7 +217,7 @@
                 <svg>
                   <use xlink:href="#arrow">
                 </svg>
-                <span class="lp-story_label">本編<br><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
+                <span class="lp-story_label">本編<br><span>「新聞広告の日<br class="mod-displayNone_smallDesktop">THE NEWS FOR NEW TEAM」</span></span>
               </div>
             </button>
           </div>
